<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>de.dustplanet</groupId>
    <artifactId>bukkit-plugin</artifactId>
    <version>9.1.0</version>
    <relativePath />
  </parent>

  <artifactId>SilkSpawnersShopAddon</artifactId>
  <version>4.0.0-SNAPSHOT</version>
  <name>SilkSpawnersShopAddon</name>
  <description>A sign shop addon for SilkSpawners</description>
  <url>https://www.spigotmc.org/resources/12028/</url>

  <properties>
    <plugin.name>SilkSpawnersShopAddon</plugin.name>
    <plugin.main>de.dustplanet.silkspawnersshopaddon.SilkSpawnersShopAddon</plugin.main>
    <plugin.package>de.dustplanet.silkspawnersshopaddon</plugin.package>
    <jdk.version>1.8</jdk.version>
    <java.version>1.8</java.version>
  </properties>

  <repositories>
    <repository>
      <id>parent</id>
      <url>https://repo.dustplanet.de/artifactory/bukkit-plugins/</url>
    </repository>
    <repository>
      <id>vault-repo</id>
      <url>https://repo.dustplanet.de/artifactory/ext-release-local/</url>
    </repository>
    <repository>
      <id>SilkSpawners-Repo</id>
      <url>https://repo.dustplanet.de/artifactory/libs-release-local/</url>
    </repository>
    <repository>
      <id>dustplanet</id>
      <url>https://repo.dustplanet.de/artifactory/private/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>${spigot.version}</version>
    </dependency>
    <dependency>
      <groupId>de.dustplanet</groupId>
      <artifactId>silkspawners</artifactId>
      <version>8.2.0</version>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>net.milkbowl.vault</groupId>
      <artifactId>VaultAPI</artifactId>
      <version>1.7.1</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>5.3.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>
  </dependencies>

  <!-- Maven is broken, so add scm duplication to child -->
  <scm>
    <url>https://github.com/timbru31/SilkSpawnersShopAddon</url>
    <connection>scm:git:git://github.com/timbru31/SilkSpawnersShopAddon.git</connection>
    <developerConnection>scm:git:git@github.com:timbru31/SilkSpawnersShopAddon.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
</project>
